// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header test 로그인 되어있다면 1`] = `
<styled.div>
  <div
    className="row text-center"
  >
    <div
      className="col left"
    >
      <div
        className="reacto"
      >
        <div
          className="font"
        >
          Reacto | Connecto
        </div>
      </div>
    </div>
    <div
      className="col"
    >
      <Styled(Link)
        to="/"
      >
        splendy
      </Styled(Link)>
    </div>
    <div
      className="col text-right d-flex flex-row-reverse right"
    >
      <div>
        <ButtonDropdown>
          <Styled(DropdownToggle)
            caret={true}
            color="btn btn-outline-primary"
          >
            g1
          </Styled(DropdownToggle)>
          <DropdownMenu
            flip={true}
            tag="div"
          >
            <DropdownItem
              header={true}
              tag="button"
              toggle={true}
            >
               
              <li>
                <Link
                  replace={false}
                  to="/settings"
                >
                   정보수정 
                </Link>
              </li>
            </DropdownItem>
            <DropdownItem
              tag="button"
              toggle={true}
            >
               
              <li>
                <Link
                  replace={false}
                  to="/broadcast/settings/broadcast"
                >
                  방송국
                </Link>
              </li>
            </DropdownItem>
            <DropdownItem
              divider={true}
              tag="button"
              toggle={true}
            />
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <a>
                <i
                  className="material-icons"
                >
                  lock_open
                </i>
              </a>
            </DropdownItem>
          </DropdownMenu>
        </ButtonDropdown>
      </div>
      <styled.input
        placeholder="search"
      />
    </div>
  </div>
  <styled.div>
    <div>
      <Link
        replace={false}
        to="/streamingList"
      >
        <span
          id="all"
          onClick={[Function]}
        >
          전체
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
         
        <span
          id="follow"
          onClick={[Function]}
        >
          팔로우
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="storyboard"
          onClick={[Function]}
        >
          스토리보드
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="clip"
          onClick={[Function]}
        >
          클립
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="communication"
          onClick={[Function]}
        >
          소통
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="community"
          onClick={[Function]}
        >
          커뮤니티
        </span>
      </Link>
    </div>
    <styled.span
      id="slider"
    />
  </styled.div>
</styled.div>
`;

exports[`Header test 로그인 되어있지 않다면 1`] = `
<styled.div>
  <div
    className="row text-center"
  >
    <div
      className="col left"
    >
      <div
        className="reacto"
      >
        <div
          className="font"
        >
          Reacto | Connecto
        </div>
      </div>
    </div>
    <div
      className="col"
    >
      <Styled(Link)
        to="/"
      >
        splendy
      </Styled(Link)>
    </div>
    <div
      className="col text-right d-flex flex-row-reverse right"
    >
      <styled.button
        className="btn-outline-primary"
      >
        <div>
          login
        </div>
      </styled.button>
      <styled.input
        placeholder="search"
      />
    </div>
  </div>
  <styled.div>
    <div>
      <Link
        replace={false}
        to="/streamingList"
      >
        <span
          id="all"
          onClick={[Function]}
        >
          전체
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
         
        <span
          id="follow"
          onClick={[Function]}
        >
          팔로우
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="storyboard"
          onClick={[Function]}
        >
          스토리보드
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="clip"
          onClick={[Function]}
        >
          클립
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="communication"
          onClick={[Function]}
        >
          소통
        </span>
      </Link>
    </div>
    <div>
      <Link
        replace={false}
        to="/moonlight"
      >
        <span
          id="community"
          onClick={[Function]}
        >
          커뮤니티
        </span>
      </Link>
    </div>
    <styled.span
      id="slider"
    />
  </styled.div>
</styled.div>
`;
